--- a/src/components/formFields/field.module.scss
+++ b/src/components/formFields/field.module.scss
@@ -1,7 +1,7 @@
 @import "constants/constants.scss";
 
 .field {
-    margin: 30px 10px;
+    margin: 10px;
     display: flex;
     flex-direction: column;
     label {
