--- a/src/app/personal/components/infoTab/infoTab.module.scss
+++ b/src/app/personal/components/infoTab/infoTab.module.scss
@@ -13,3 +13,9 @@
         margin: 40px auto;
     }
 }
+.button {
+    text-align: center;
+    display: block;
+    width: 200px;
+    margin: 30px auto;
+}
